tests/error/comptime/dereference_after_lifetime_end5.bz
function test()
{
	(consteval {
		let &i = {
			let i = 0;
			i
		};
		i;
	});
}
